package AppMananger;

import Figures.Shape;

public interface OnAddedListener {
    void onAdded(Shape shape);
}
